<resources>
    <string name="app_name">El Basket</string>


    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <string name="withdraw">Withdraw</string>
    <string name="log_out">Logout</string>
    <string name="choose_image">Choose image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Likes</string>
    <string name="personal_info">Personal info</string>
    <string name="headlines">Headlines</string>
    <string name="breaking_news">Breaking news</string>
    <string name="language">Country and language</string>
    <string name="switch_to_arabic">Switch to Arabic</string>
    <string name="super_market">Super market</string>
    <string name="school_supplies">School supplies</string>
    <string name="toys">Toys</string>
    <string name="kitchen_supplies">Kitchen supplies</string>
    <string name="backIcon">&#xe905;</string>
    <string name="confirm_logout">Are you sure you want to logout? </string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Continue">Continue</string>
    <string name="type">Type:</string>
    <string name="color">Color:</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Are you sure you want to remove this order</string>
    <string name="best_offers">Top offers</string>
    <string name="browse_by_category">Top categories</string>
    <string name="egypt">Egypt</string>
    <string name="cash_in_balance">Cash in balance :</string>
    <string name="_500egp">500EGP</string>
    <string name="clothes">Clothes</string>
    <string name="kids">Kids</string>
    <string name="electronics">Electronics</string>
    <string name="smart_phones">Smart phones</string>
    <string name="cooking">Cooking</string>
    <string name="free_shipping">Free shipping</string>
    <string name="egp">EGP</string>
    <string name="confirm_withdrawal">Are you sure you want to withdraw your money</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="free_shipping_included">Free Shipping Included</string>
    <string name="_15_egp">15EGP</string>

    <string name="pure_rice_one_of_the_finest">Pure rice one of the finest</string>
    <string name="prices_included_added_tax_value">Prices included added tax value</string>
    <string name="details">Details</string>
    <string name="weight">Weight</string>
    <string name="_100gm">100gm</string>
    <string name="soundness">Soundness</string>
    <string name="production_date">Production:</string>
    <string name="expiration_date">Expiration:</string>
    <string name="shipping_details">To get your order tomorrow order before 7PM</string>
    <string name="shipping_city">Ship to Giza</string>
    <string name="free_shipping_on_orders_with_250_0">Free shipping on orders with 250.0</string>
    <string name="discount">-25%</string>
    <string name="offer_name">Offer name</string>
    <string name="samsung_phon_samsung_phons_amsung">Samsung Phon Samsung PhonS amsung</string>
    <string name="change_city">(Change city)</string>
    <string name="search_hint">What are you looking for ?</string>
    <string name="galaxy_phone">Apple Iphone XS</string>
    <string name="_11_200_egp">11,200 EGP</string>
    <string name="user_name">User name</string>
    <string name="rating">Rating Rating Rating Rating Rating</string>
    <string name="remove">Remove</string>
    <string name="total_cost">Total Cost:</string>
    <string name="filter">Filter</string>
    <string name="_50_items_available">50 Items available in </string>
    <string name="description">Description</string>
    <string name="descriptionTxt" >You will be able to make your favourite rice dish</string>
    <string name="reviews">Reviews</string>
    <string name="give_rating">Give rating</string>
    <string name="vendorTxt" >Basket</string>
 <string name="vendor" >Vendor</string>
    <string name="sponser">Sponsor</string>
    <string name="crisp_chocolate_balls">Crisp chocolate balls</string>
    <string name="similar_items">Similar items</string>
    <string name="see_full_reviews">See full reviews</string>
    <!--RATING STRINGS -->
    <string name="excellent">Excellent</string>
    <string name="very_good2">Very good</string>
    <string name="good">Good</string>
    <string name="okay">Okay</string>
    <string name="bad">Bad</string>
    <string name="write_a_comment" >Write a comment</string>

</resources>
