<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView21">
        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            />
        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
            />
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:tag="regular"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="@string/_100gm"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />


        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="@string/soundness"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toEndOf="@+id/divider4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="regular"
            android:layout_marginStart="5dp"
            android:text="22/9/2109"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="@string/production_date"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/divider4"
            app:layout_constraintTop_toTopOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="22/9/2022"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="@string/expiration_date"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toEndOf="@+id/divider4"
            app:layout_constraintTop_toTopOf="@+id/textView30" />

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:tag="regular"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        android:text="@string/description"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/descriptionTxt"
        android:text="@string/descriptionTxt"
        android:tag="regular"
        android:textSize="@dimen/textSize"
        />
    <View
        android:id="@+id/descriptionDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/shipmentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/transparent_grey_box"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionDivider"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft">

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="regular"
            android:text="@string/shipping_details"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="regular"
            android:text="@string/shipping_city"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:tag="regular"
            android:text="@string/change_city"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/textView18" />
    </android.support.constraint.ConstraintLayout>
</merge>